--- a/index.html
+++ b/index.html
@@ -15,26 +15,14 @@
 		<option value="DrawSkills">Art and Drawing</option>
 		<option value="Brevity">Brevity</option>
 		<option value="IntSkills">Human-computer Interaction</option>
-		<option value="CollabSkills">Collaberation Skills</option>
+		<option value="CollabSkills">Collaboration Skills</option>
 		<option value="GitSkills">Code Repository Skills</option>
 		<option value="UseSkills">Computer Usage Skills</option>
-
 		
 	</select> <input type="checkbox" value="shhed" class="shed" name="shedding"> Sheduling (If there are groups the program will after sorting try to balance the groups on all Skills)
 	<br>
 	<div id="filtret"> 
-		<input type="checkbox" value="GxSkills" class="filter" name="Graphics" style="margin-left:5px;outline:5px; outline-color:aqua" checked > Computer Graphics
-		<input type="checkbox" value="ProgSkills" class="filter" name="Programming"checked> Programming
-		<input type="checkbox" value="EvSkills" class="filter" name="Evaluation" checked> Evaluation
-		<input type="checkbox" value="VisSkills" class="filter" name="Visualization" checked> Visualization
-		<input type="checkbox" value="StatSkills" class="filter" name="Statitics"checked> Statistics
-		<input type="checkbox" value="MathSkills" class="filter" name="Mathematics" checked> Mathematics
-		<input type="checkbox" value="DrawSkills" class="filter" name="Art and Drawing" checked>Art and Drawing
-		<input type="checkbox" value="IntSkills" class="filter" name="Programming"checked> Human-computer Interaction
-		<input type="checkbox" value="ComSkills" class="filter" name="Evaluation" checked> Communication
-		<input type="checkbox" value="CollabSkills" class="filter" name="Programming"checked> Collaberation
-		<input type="checkbox" value="GitSkills" class="filter" name="Evaluation" checked> Code Repository
-		<input type="checkbox" value="UseSkills" class="filter" name="Usage" checked> Computer Usage
+
 	</div>
 	<button type="button" id= "People">People</button>
 	<button type="button" id = "Groups">Groups</button>
@@ -58,11 +46,9 @@
 <div><p id ="Infobox"> Hello!</p></div>
 
 <style>
-	.barr {
-	  fill: steelblue;
-	}
-	.bar:hover {
-	  fill: brown;
+
+	rect:hover {
+	  fill: rgb(104, 93, 93);
 	}
 	.cool:hover{
 	fill: steelblue;
@@ -83,7 +69,6 @@
 solo = false;
 var Fancy = ['Information Visualization Skills','Statistical Skills','Mathematical Skills','Drawing and Artistic Skills','Computer Usage Skills','Programming Skills','Computer Graphics Programming Skills','Human-computer Interaction Programming Skills','User Experience Evaluation Skills','Communication Skills','Collaboration Skills','Code Repository Skills'];
 var Skills = ['VisSkills','StatSkills','MathSkills','DrawSkills','UseSkills','ProgSkills','GxSkills','IntSkills','EvSkills','ComSkills','CollabSkills','GitSkills'];
-//var data1 = [{Name:"hej",Order:1,Skills:['Pro','Fal'],Interest:1,Pro:7,Fal:5},{Name:"ble",Order:2,Skills:['Pro','Fal'],Fal:2,Pro:5},{Name:"flu",Order:3,Skills:['Pro','Fal'],Interest:5,Pro:10,Fal:9},{Name:"bluuuuu",Order:7,Skills:['Pro','Fal'],Interest:2,Pro:2,Fal:7}]
 var svg = d3.select("svg"),
 margin = {
 	top: 20,
@@ -95,8 +80,9 @@ width = +svg.attr("width") - margin.left - margin.right,
 height = +svg.attr("height") - margin.top - margin.bottom,
 g = svg.append("g").attr("transform", "translate(" + margin.left  + "," + margin.top + ")");
 var parseTime = d3.timeParse("%d-%b-%y");
-var ferg = [d3.color("#6ed3cf"),d3.color("#9068be"),d3.color("#3a4660"),d3.color("#c9af98"),d3.color("#ed8a63"),d3.color("#845007"),d3.color(" #feda6a"),d3.color("#393f4d"),d3.color("#1d1e22"),d3.color("#7dce94"),d3.color("#3d3d3f"),d3.color("#bd8c7d")]
+var ferg = [d3.color("#6ed3cf"),d3.color("#9068be").brighter(1),d3.color("#3a4660").brighter(2),d3.color("#c9af98"),d3.color("#ed8a63").brighter(1),d3.color("#845007").brighter(2),d3.color(" #feda6a"),d3.color("#393f4d").brighter(2),d3.color("#1d1e22").brighter(4),d3.color("#7dce94"),d3.color("#3d3d3f").brighter(2),d3.color("#bd8c7d")]
 
+d3.selectAll("#filtret").selectAll('div').data(ferg).enter().append('div').html((d,i)=> {return Fancy[i]}).style("background-color",d=> d).style("float","left").append("input").attr("value",(d,i)=>{return Skills[i];}).attr("type","checkbox").attr("class","filter").property("checked",true);
 var rawData; 
 var tooltip = d3.select("body").append("div").attr("class", "toolTip");
 var infoBox = d3.select("#Infobox")
@@ -105,28 +91,22 @@ y = d3.scaleLinear()
 
 
 
-
+// create stuff function
 var bluu = function (data,kind) {
 
 	x = d3.scaleBand()
-    //.domain(data.map(d => d.Name))
     .rangeRound([margin.left, width+20 - margin.right])
     .padding(0.18)
 
-	//if (kind == "single"){
+
 		y.domain([0,90]);
-	//}else{
-	//	y.domain([0,400])
-	//}
 	
 
-	//console.log(data);
 	x.domain(data.map(function (d) {
-		console.log(d.Name)
 			return d.Name;
 		}));
-		//console.log(d3.range(1,11))
-	
+
+	// create the actual bars
 	g.append("g").attr("class", kind)
     .selectAll("g")
     .data(data, d => d.Name)
@@ -134,7 +114,6 @@ var bluu = function (data,kind) {
 	.attr("class",d => d.Name)
     .selectAll("rect")
     .data(d => {
-		//console.log(data,d,"argggg");
 		outerlist = [];
 		Skills.forEach(e => {
 		var list = [];
@@ -147,9 +126,7 @@ var bluu = function (data,kind) {
 		return d[0]
 	} )
 	.enter().append("rect")
-	  //.attr("fill", d=> ferg[d.folor] )
        .attr("fill", d => {
-                //console.log(Skills.indexOf(d[0]),farg[Skills.indexOf(d[0])]);
                 return ferg[Skills.indexOf(d[0])];})
 		.on("mousemove", function(d){
 		tooltip
@@ -174,7 +151,6 @@ var bluu = function (data,kind) {
 				d[1].allNames.forEach(f => {
 					theNames += " "+f+","
 				}) 
-				//console.log(theNames)
 				return theNames +"<br>" + "" + Fancy[Skills.indexOf(d[0])] +" : "+ parseInt(d[1][d[0]]*5) ;
 				}
 		})
@@ -187,13 +163,11 @@ var bluu = function (data,kind) {
 		var skill = d[0];
 		var pers = d[1];
 		var value = pers[skill];
-		//console.log("wat",skill,pers,value,"bleee");
 		var index = Skills.indexOf(skill);
 		var y1 = 0;
 		for (i = 0; i < index; i++){
 			y1 += Number(pers[Skills[i]]);
 		}
-		//console.log(y1,d);
 		return (y(Number(y1)+Number(value)));
 		
 	})
@@ -205,7 +179,6 @@ var bluu = function (data,kind) {
 		return( y(0)-y(Number(value)))
 	
 	})
-	  //.attr("bullshit", d.Skills)
       .attr("width", x.bandwidth());
 
 
@@ -230,44 +203,25 @@ var bluu = function (data,kind) {
 	.attr("dy", "0.71em")
 	.attr("text-anchor", "end")
 	.text("Skill");
-/*
-	g.selectAll(".bar")
-	.data(data)
-	.enter().append("rect")
-	.attr("class", "bar")
-	.attr("x", function (d) {
-		return x(d.Order);
-	})
-	.attr("y", function (d) {
-		return y(Number(d.Skill));
-	})
-	.attr("width", x.bandwidth())
-	.attr("height", function (d) {
-		return height - y(Number(d.Skill));
-	});
 
-
-*/
 	  
 
 }
-
+//load the data
 d3.tsv("IVIS19.tsv").then(function(data) {
-	//console.log(data, "inte error")
 	rawData = data;
 	rawData.pop();
-	console.log(rawData);
 
 
 	rawData.forEach(x =>{
 		x.Brevity = x.Hobbies.length + x.Learn.length
 	})
 	console.log(rawData);
-	//rawData.sort(function(a,b){return b.VisSkills - a.VisSkills});
+
 
 	bluu(rawData,"single");
 
-	//g.selectAll(".single").style("display","none")
+
 
 	var data = rawData;
 
@@ -276,8 +230,7 @@ d3.tsv("IVIS19.tsv").then(function(data) {
 
 	theNames = "";
 
-
-// change sorting that's X 
+// if a selection is made sort that sh't
 	d3.select("#selector").on("change", function() {
 		var selectedValue = d3.select("#selector").property('value')
   data.sort((a, b) => (b[selectedValue] - a[selectedValue]))
@@ -351,7 +304,6 @@ if (solo){
 		var pers = d[1];
 		newgroups.forEach(k =>{
 			if (k.Name == d[1].Name){
-				console.log(k,d[1])
 				pers = k;
 				
 			}
@@ -370,7 +322,6 @@ if (solo){
 		newgroups.forEach(k =>{
 			if (k.Name == d[1].Name){
 				pers = k;
-			//console.log(k,d[1]);
 			}
 		});
 		var value = pers[skill];
@@ -384,7 +335,7 @@ if (solo){
 // change filter! that's Y
 d3.selectAll(".filter").on("change", ()=>{
 	var filter = [];
-	var nySkill = document.getElementById("filtret").children;
+	var nySkill = document.getElementsByClassName("filter");
 	for (i=0; i<nySkill.length;i++){
 		if(!nySkill[i].checked)
 		filter.push(nySkill[i].value);
@@ -395,14 +346,13 @@ d3.selectAll(".filter").on("change", ()=>{
 	}
 	})
 
-
+// the function that changes hieghts and y values to zero
 	function newfilter(data,filter,kind) {
 	var newdata = JSON.parse(JSON.stringify(data))
 
 	newdata.forEach(d => {
 		filter.forEach(x => {
 			d[x]= 0+""
-			//console.log(d,x)
 		})
 		})
 	g.selectAll(kind)
@@ -415,23 +365,19 @@ d3.selectAll(".filter").on("change", ()=>{
 		newdata.forEach(k =>{
 			if (k.Name == d[1].Name){
 				pers = k;
-			//console.log(k,d[1]);
+
 			}
 		});
-		//console.log(pers,"mehe")
-		//console.log(d[1],pers,skill,"uga uga")
+
 		var value = pers[skill];
-		//console.log("wat",skill,pers,value,"bleee");
 		var index = Skills.indexOf(skill);
 		var y1 = 0;
 		for (i = 0; i < index; i++){
 			y1 += Number(pers[Skills[i]]);
 		}
 		if (value == 0){
-			//console.log(value,y1,y(Number(y1)+Number(value)),y(0)-y(Number(value)),skill,pers)
 			return(0);
 		}
-		//console.log(y1,d);
 		return (y(Number(y1)+Number(value)));
 		
 	})
@@ -441,12 +387,11 @@ d3.selectAll(".filter").on("change", ()=>{
 		newdata.forEach(k =>{
 			if (k.Name == d[1].Name){
 				pers = k;
-			//console.log(k,d[1]);
+
 			}
 		});
 		var value = pers[skill];
 		if (value == 0){
-			//console.log("wasssss")
 			return 0;
 		} 
 		return(y(0)-y(Number(value)))
@@ -458,16 +403,11 @@ d3.selectAll(".filter").on("change", ()=>{
 
 
 
-
+// create groups based on sort
  function makingGroups(data,selectedValue){
-	 //selectedValue = "VisSkills"
-	 //var namn = {};
 	 if (selectedValue !== undefined){
-	 //console.log(data);
-	 //data.sort((a, b) => (b[selectedValue] - a[selectedValue]))
-	 console.log(data,"hello!")
 	 }
-	//var groupdata = [];
+
 	var groups = [{Name:"Group 1",Total:0,allNames:[]},{Name:"Group 2",Total:0,allNames:[]},{Name:"Group 3",Total:0,allNames:[]},{Name:"Group 4",Total:0,allNames:[]},{Name:"Group 5",Total:0,allNames:[]},{Name:"Group 6",Total:0,allNames:[]},{Name:"Group 7",Total:0,allNames:[]},{Name:"Group 8",Total:0,allNames:[]},{Name:"Group 9",Total:0,allNames:[]},{Name:"Group 10",Total:0,allNames:[]}]
 	groups.forEach(d =>{
 		 Skills.forEach(k => {
@@ -494,14 +434,13 @@ d3.selectAll(".filter").on("change", ()=>{
 	return groups;
  }
  groupdata = makingGroups(data);
-	console.log(groupdata,"fleee")
 	bluu(groupdata,"groupings");
 
 
 
 
 
-
+// try to fit the groups in smallest current group
 	function makingShed(data,selectedValue){
 		var checkers = Skills;
 	 if (selectedValue !== undefined){
@@ -513,16 +452,13 @@ d3.selectAll(".filter").on("change", ()=>{
 			 d[k] = 0;
 		 })
 	 })
-	 console.log(groups)
 	 data.forEach(d => {
 		Min = groups[0];
 		groups.forEach(e =>{
-			//console.log(e.total,Min.total,e,Min,"walll")
 			if (e.Total < Min.Total){
 				Min = e;
 			}
 		})
-		// Min is lowest total group
 		checkers.forEach(tut => {
 			Min.Total += Number(d[tut]);
 		})
@@ -533,17 +469,15 @@ d3.selectAll(".filter").on("change", ()=>{
 	 })
 	 return groups
  }
-//groupdata = makingShed(data);
-//	bluu(groupdata,"groupings");
 
 
+// the buttons
 g.selectAll(".groupings").style("display","none")
 
 d3.select("#People").on("click", ()=> {
 	solo = false;
 	g.selectAll(".solo").remove();
 	g.selectAll(".groupings").style("display","none")
-	//bluu(data)
 	g.selectAll(".single").style("display","initial")
 	
 });
@@ -561,16 +495,20 @@ d3.select("#Show").on("click", ()=> {
 	g.selectAll(".single").style("display","none")
 	g.selectAll(".groupings").style("display","none")
 	var theGroup = d3.select("#selector2").property('value');
-	//console.log(groupdata,"hed")
+	var listan ;
+	sing = [];
 	groupdata.forEach(d=>{
 		if(theGroup == d.Name){
-			console.log("PLINGS!")
+		listan = d.allNames
 		}
 	})
-	for(i=0;i<5;i++){
-		sing.push(data[i])
-	}
-	
+	listan.forEach(d=>{
+		data.forEach(k=>{
+			if (k.Name == d){
+			sing.push(k);
+		}})
+		}
+	)
 	bluu (sing,"solo")
 	var filter = [];
 	var nySkill = document.getElementById("filtret").children;
@@ -583,25 +521,8 @@ d3.select("#Show").on("click", ()=> {
 });
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 }).catch(function(error){
 	console.error(error)
 });
-
-
-
 
 </script>
