--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Partly based on Mike Bostocks Stacked Bar Chart  https://bl.ocks.org/mbostock/1134768  Released under the GNU General Public License, version 3. D3 Stacked Bar Chart https://beta.observablehq.com/@mbostock/d3-stacked-bar-chart 
+ Bar Chart With ToolTip D3 V4 By Alan Dunning  https://bl.ocks.org/alandunning/274bf248fd0f362d64674920e85c1eb7 Released under the GNU General Public License, version 3. -->
 <!DOCTYPE html>
 <head>
 </head>
